adicionei a descrição da tabela dos dados da redação e figura das distribuições amostrais

--- a/enem_data_analysis.Rmd
+++ b/enem_data_analysis.Rmd
@@ -73,6 +73,8 @@ Ciências Humanas (CH)
 Linguagens e Códigos (LC)
 Matemática (MT)
 
+Por vezes, há questionamentos sobre a defasagem do aprendizado do aluno pertencente a escola pública. Sendo assim, o ENEM (Exame Nacional do Ensino Médio), tem como intuito, além de possibilitar o estudante brasileiro a ingressar em uma universidade pública, ou até mesmo obter bolsas em faculdades particulares mediante a pontuação realizada no exame, o mesmo também é usado como métrica para a análise da performance dos estudantes -sendo eles de escola pública ou privada, em relação a todo o aprendizado obtido durante os três anos do ensino médio. Tal exame, afim de realizar uma completa análise em relação a este aprendizado, engloba diferentes disciplinas, dentre elas, matemática, linguagem, ciências da natureza e ciências humanas. Através do banco de dados do INEP(Instituto Nacional de Estudos e Pesquisas Educacionais Anísio Teixeira), este relatório trás diferentes análises a respeito das comparações de aprendizado entre alunos de escolas públicas e privadas, que realizaram, ao longo dos anos, o Exame Nacional do Ensino Médio. Assim, diante da situação de pandemia que o Brasil tem enfrentado desde o início de março deste ano, assuntos relacionados ao ENEM se mostraram ainda mais em pauta, uma vez que grande parte da população pede seu adiamento, com a justificativa de que se o exame ocorrer no mesmo período dos anos anteriores, muitos alunos serão prejudicados, ainda mais os de escolas públicas. Com isso, o relatório tem como intuito analisar, mediante a análise exploratória, se os alunos pertencentes a escola pública, realmente obtém desempenho inferioriores em relação aos alunos de escola privada dentre as diferentes matérias avaliadas no exame.
+
 # Banco de dados
 
 A base de dados completa assim como demais informações sobre as edições do ENEM por escola podem ser acessada através do link: [\underline{ENEM por escola}](http://portal.inep.gov.br/microdados). Embora a base completa possui um total de 27 variáveis utilizaremos apenas as que estão descritas abaixo:
@@ -144,6 +146,15 @@ escolas %>% group_by(Ano,`Administração`) %>%
   kable_styling(latex_options = "scale_down")
 ```
 
+
+```{r}
+escolas %>% filter(Administração == "Pública", Ano == 2012) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull() - escolas %>% filter(Administração == "Pública", Ano == 2013) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull()
+
+escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(qtl = quantile(NU_MEDIA_LP,0.75,na.rm = T)) %>% filter(qtl == max(qtl)) %>% dplyr::select(Ano) %>% pull()
+```
+
+A partir das informações da Tabela \@ref(tab:CH), percebe-se que o ano de 2015 apresentou o melhor desempenho na categoria de ciências humanas por parte das escolas privadas, uma vez que, a média obtida por estes alunos foi de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()`. Além disso, dentre estas escolas verifica-se quase uma ascendente melhora nas performances dos candidatos, uma vez que,  ano após ano, desconsiderando o ano de 2013, que apresentara um retrocesso de aproximadamente `r escolas %>% filter(Administração == "Pública", Ano == 2012) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull() - escolas %>% filter(Administração == "Pública", Ano == 2013) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull()` pontos em relação ao anterior, vê-se um planejamento e um bom preparo por parte destas instiuições em alavancar a performance de seus alunos nesta disciplina. Já para as escolas de ensino público, o ano de 2015 foi também o melhor ano para estas instituições, com a média de `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()`, ou seja, aproximadamente `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull() - escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()` pontos abaixo da performance das escolas privadas. Entretanto, assim como as escolas de ensino privado, com excessão do ano de 2013, as públicas também demonstraram a cada ano, melhores performances por parte de seus alunos. Além disso, ao realizar-se uma detalhada análise da tabela em questão, percebe-se que ano a ano, dentre os 25$\%$ piores resultados (ou seja, primeiro quartil), das escolas privadas, ainda são superiores aos 75$\%$ melhores resultados da instituições públicas, uma vez que, as medianas das duas intituições apresentaram grande diferença. 
+
 ```{r CH}
 #TABELA RESUMO DOS VALORES OBSERVADOS DA VARIAVEL NOTAS MEDIAS EM CIENCIAS HUMANAS
 escolas %>% group_by(Ano,`Administração`) %>%
@@ -161,6 +172,8 @@ escolas %>% group_by(Ano,`Administração`) %>%
                 font_size = 8) %>% 
   kable_styling(latex_options = "scale_down")
 ```
+
+Verificando as informações da Tabela \@ref(tab:LP), percebe-se que o melhor desempenho no quesito Liguagens e Códigos obtido tanto pelas escolas privadas como públicas ocorrera no ano de 2011, com média de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_LP,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()` e `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_LP,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()`, respectivamente. Percebe-se que, ano após ano, as médias das performances dos estudantes pertecentes às escolas privadas são superiores dos alunos da rede pública, assim como os resultados referentes a performance mínima e máxima das instituições particulares também são maiores em relação as intituições públicas. Além disso, de forma geral, o desvio padrão dos resultados das escolas públicas são menores aos das escolas privadas, demonstrando assim, a existência de menor variação nos resultados destas escolas em relação as instiuições particulares. 
 
 ```{r LP}
 #TABELA RESUMO DOS VALORES OBSERVADOS DA VARIAVEL NOTAS MEDIAS EM LINGUAGENS E CODIGOS
@@ -180,6 +193,8 @@ escolas %>% group_by(Ano,`Administração`) %>%
   kable_styling(latex_options = "scale_down")
 ```
 
+Diante da Tabela \@ref(tab:MT) vê-se que em todos os anos as instituições privadas apresentaram melhor desempenho em relação as escolas públicas no quesito Matemática. Enquanto as escolas particulares tiveram como melhor performance o ano de 2011, com a pontuação de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_MT,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()`, as instituições públicas obtiveram como melhor média a pontuação de `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_MT,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()` neste mesmo ano. Uma vez que, ao observar a tabela de forma detalhada, conclui-se que de forma geral, há uma queda de performance ano após ano nas duas adiminstrações de ensino, cabendo então a suposição de que o grau de dificuldade dos exames de matemática aumentaram, e as escolas ao longo de 2011 a 2015 não prepararam seus alunos de forma que suprisse as exigências de conhecimento destes exames. Além disso, temos novamente que o primeiro quartil de cada ano das escolas privadas, ou seja, as notas que apresentaram resultado abaixo da mediana, ainda são superiores ao terceiro quartil ou seja, notas superiores a mediana, das performances das escolas públicas, representando assim, a defasagem na disciplina de matemática lecionada na rede pública.
+
 ```{r MT}
 #TABELA RESUMO DOS VALORES OBSERVADOS DA VARIAVEL NOTAS MEDIAS EM MATEMATICA
 escolas %>% group_by(Ano,`Administração`) %>%
@@ -197,6 +212,8 @@ escolas %>% group_by(Ano,`Administração`) %>%
                 font_size = 8) %>% 
   kable_styling(latex_options = "scale_down")
 ```
+
+Com base na tabela \@ref(tab:RED) observa-se no que tange ao desempenho dos alunos na prova de Redação que no ano de 2015 as escolas privadas obtiveram em média de pontos 930.00 e as escolas públicas, 851.27, e esses representaram as maiores notas máximas no período analisado. Nesse mesmo ano, tanto as instituições privadas quanto as públicas também obtiveram suas maiores notas mínimas, em média, 360.00 e 345.00 pontos, respectivamente. Em contraposição, ao analisarmos o ano em que as escolas obtiveram suas notas mínimas mais baixas, verificamos que ambas, privadas e públicas tiveram suas piores performances em Redação no mesmo ano, a saber, no ano de 2014, com a pontuação média de 215.38 nas escolas privadas e 186.67 nas públicas. Com relação à menor pontuação máxima, a mesma ocorreu em anos diferentes: as instituições privadas obtiveram 810.53 em 2012 e as públicas, por sua vez, 764.38 em 2011. Ainda, fazendo uma análise detalhada da tabela em referência, nota-se que ao logo dos anos que os piores resultados do primeiro quartil das escolas privadas são superiores aos melhores resultados do terceiro quartl das escolas públicas, tendo em vista que as medianas das duas administrações apresentaram grande diferença, e isso denota a melhor performance das instituições privadas na Redação ao longo do período. O que chama a atenção nessa pontuação do ano de 2014 especificamente é a coincidência de ambas administrações, privadas e públicas, performarem mal no mesmo ano. Apesar das instituições privadas apresentarem um desempenho geral melhor que o das escolas públicas, em 2014 tanto sua pontuação mínima quanto sua pontuação máxima foram as mais baixas do período entre 2011 e 2015. E o mesmo aconteceu para nas instituições públicas nesse ano. Fatores externos, como o tema escolhido para a redação e até um preparo dos alunos das instituições privadas mais focado em outras áreas, podem influenciar igualmente a variação, para cima ou para baixo, dos indicadores aqui analisados.
 
 ```{r RED}
 #TABELA RESUMO DOS VALORES OBSERVADOS DA VARIAVEL NOTAS MEDIAS NA REDACAO
@@ -232,6 +249,8 @@ data <- melt(data,id="Habilidades")
 data$`Administração` <- rep(escolas$Administração,rep(5,length(escolas$Administração)))
 data$Ano <- rep(escolas$Ano,rep(5,length(escolas$Ano)))
 ```
+
+O gráfico na Figura\@ref(fig:plot) mostra claramente o desempenho dos alunos nas instituições privadas e públicas durante o período de 2011 a 2015 e podemos observar que ao longo desse período esse desempenho se manteve até que de forma similar dentro de cada administração, uma vez que a média dos alunos da rede privada no geral sempre foi acima dos 500.00 pontos e a dos alunos da rede pública, abaixo dos mesmos 500.00, independentemente da habilidade. Ou seja, mesmo com o passar dos anos não se vislumbra uma significante melhora em qualquer média de quaisquer das habilidades presentes no ENEM, por nenhuma das duas formas de rede de ensino. Por outro lado, não se verifica nenhuma significante piora nas mesmas. Pode-se supor que nenhuma das administrações muito tenha feito nesse período de quatro anos para que seus alunos efetivamente tivessem um desempenho melhor. Ao contrário, o que podemos perceber é que elas continuaram seguindo o mesmo método, apenas para manterem o padrão que que já tinham atingido. Se houve algum investimento em termos de ensino, o mesmo foi dirigido a alguma área de conhecimento específica e provavelmente uma outra área foi negligenciada e com isso o desempenho como um todo não melhorou ao logo dos anos. Essa informação o gráfico consegue nos mostrar. Ao olharmos para o gráfico, tanto da rede privada quanto na rede pública, é possível notar que a média da habilidade de Ciências Humanas aumentou de 2011 para 2015; em contrapartida, a média da habilidade de Matemática, abaixou no mesmo período. Ou seja, não houve uma melhora uniforme em todas as habilidades para nenhum estudante que participou do ENEM. Entre os fatores para isso acontecer também podemos apontar os diferentes graus de dificuldade em diferentes anos de aplicação da prova, o que justificaria o investimento da instituição em determinada área de conhecimento em detrimento de outra. Com exceção da já grande diferença que existe entre o desempenho dos alunos das instituições privadas e das instituições públicas, podemos imaginar que há um grande problema estrutural por trás dessas instituições que não investe na melhoria do ensino de forma que esta reflita no desempenho de seus alunos de forma significativa como um todo, pois o que o exame reflete é apenas uma tentativa de manter o nível de desempenho dos mesmos.
 
 ```{r plot, fig.align='center', fig.cap="Comparação das distribuições amostrais das notas médias obtidas no ENEM por estudantes de escolas públicas e privadas entre os anos de 2011 a 2015, considerando as habilidades exigidas.",fig.pos="H", message=FALSE, error=FALSE}
 
