adicionei título, considerações finais

--- a/enem_data_analysis.Rmd
+++ b/enem_data_analysis.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "ME115 - Linguagem R"
+title: "Comparação entre os desempenhos médios dos estudantes de escolas públicas e particulares na prova do ENEM"
 author: 
   - Guilherme Artoni - RA160318
   - Isabel A. de Albuquerque - RA218047
@@ -66,14 +66,7 @@ library(reshape2)
 
 # Introdução
 
-desempenho médio dos estudantes de escolas particulares ($DM_{Part}$)
-desempenho médio dos estudantes de escolas públicas ($DM_{Pub}$)
-Ciências da Natureza (CN)
-Ciências Humanas (CH)
-Linguagens e Códigos (LC)
-Matemática (MT)
-
-Por vezes, há questionamentos sobre a defasagem do aprendizado do aluno pertencente a escola pública. Sendo assim, o ENEM (Exame Nacional do Ensino Médio), tem como intuito, além de possibilitar o estudante brasileiro a ingressar em uma universidade pública, ou até mesmo obter bolsas em faculdades particulares mediante a pontuação realizada no exame, o mesmo também é usado como métrica para a análise da performance dos estudantes -sendo eles de escola pública ou privada, em relação a todo o aprendizado obtido durante os três anos do ensino médio. Tal exame, afim de realizar uma completa análise em relação a este aprendizado, engloba diferentes disciplinas, dentre elas, matemática, linguagem, ciências da natureza e ciências humanas. Através do banco de dados do INEP(Instituto Nacional de Estudos e Pesquisas Educacionais Anísio Teixeira), este relatório trás diferentes análises a respeito das comparações de aprendizado entre alunos de escolas públicas e privadas, que realizaram, ao longo dos anos, o Exame Nacional do Ensino Médio. Assim, diante da situação de pandemia que o Brasil tem enfrentado desde o início de março deste ano, assuntos relacionados ao ENEM se mostraram ainda mais em pauta, uma vez que grande parte da população pede seu adiamento, com a justificativa de que se o exame ocorrer no mesmo período dos anos anteriores, muitos alunos serão prejudicados, ainda mais os de escolas públicas. Com isso, o relatório tem como intuito analisar, mediante a análise exploratória, se os alunos pertencentes a escola pública, realmente obtém desempenho inferioriores em relação aos alunos de escola privada dentre as diferentes matérias avaliadas no exame.
+Por vezes, há questionamentos sobre a defasagem do aprendizado do aluno pertencente a escola pública. Sendo assim, o ENEM (Exame Nacional do Ensino Médio), tem como intuito, além de possibilitar o estudante brasileiro a ingressar em uma universidade pública, ou até mesmo obter bolsas em faculdades particulares mediante a pontuação realizada no exame, o mesmo também é usado como métrica para a análise da performance dos estudantes sendo eles de escola pública ou privada, em relação a todo o aprendizado obtido durante os três anos do ensino médio. Tal exame, afim de realizar uma completa análise em relação a este aprendizado, engloba diferentes disciplinas, dentre elas, Matemática (MT), Linguagens e Códigos (LC), Ciências da Natureza (CN), Ciências Humanas (CH) e Redação (RED). Através do banco de dados do INEP (Instituto Nacional de Estudos e Pesquisas Educacionais Anísio Teixeira), este relatório trás diferentes análises a respeito das comparações de aprendizado entre alunos de escolas públicas e privadas, que realizaram, ao longo dos anos, o Exame Nacional do Ensino Médio. Além disso, diante da situação de pandemia que o Brasil tem enfrentado desde o início de março deste ano, assuntos relacionados ao ENEM se mostraram ainda mais em pauta, uma vez que grande parte da população pede seu adiamento, com a justificativa de que se o exame ocorrer no mesmo período dos anos anteriores, muitos alunos serão prejudicados, ainda mais os de escolas públicas. Com isso, o relatório tem como intuito analisar, mediante a análise exploratória, se o desempenho médio dos estudantes de escolas públicas ($DM_{Pub}$), são realmente inferiores em relação ao desempenho médio dos estudantes de escolas particulares ($DM_{Part}$) dentre as diferentes matérias avaliadas no exame. Assim como, identificar quais habilidades as escolas tem melhor e pior desempenho. Além de comparar a performance das escolas dentro do período observado, afim de investigar a evolução dos resultados. 
 
 # Banco de dados
 
@@ -96,7 +89,7 @@ A base de dados completa assim como demais informações sobre as edições do E
 Ressaltamos que para a realização da análise modificamos a variável **TP_DEPENDENCIA_ADM_ESCOLA** que originalmente é codificada como: 1 - Federal, 2 - Estadual, 3 - Municipal e 4 - Privada para 1 - Privada e 2 - Pública. De modo que as categorias administrativas Federal, Estadual e Municipal foram unificadas na categoria Pública.  
 Além disso, restringimos a análise ao período entre os anos de 2011 a 2015. Pois, segundo @inep a partir da edição de 2011 a taxa de participação necessária para divulgação do desempenho no ENEM por escola aumentou para 50$\%$. Sendo que, a taxa de participação é o número total de participantes no ENEM da escola dividido pelo número de matriculados nos anos finais do Ensino Médio da escola, informado no Censo Escolar. Bem como, passou a ser considerado como participante o estudante concluinte do ensino médio que fez as 4 áreas de conhecimento e redação. Dessa forma, não havendo mais escolas com resultado divulgado sem média das notas de redação.
 
-# Analise exploratória
+# Análise exploratória
 
 ```{r}
 # ALTERAR O CAMINHO PARA O DIRETORIO NO QUAL O ARQUIVO "MICRODADOS_ENEM_ESCOLA.csv" 
@@ -144,13 +137,6 @@ escolas %>% group_by(Ano,`Administração`) %>%
   kable_styling(latex_options = "HOLD_position",
                 font_size = 8) %>% 
   kable_styling(latex_options = "scale_down")
-```
-
-
-```{r}
-escolas %>% filter(Administração == "Pública", Ano == 2012) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull() - escolas %>% filter(Administração == "Pública", Ano == 2013) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull()
-
-escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(qtl = quantile(NU_MEDIA_LP,0.75,na.rm = T)) %>% filter(qtl == max(qtl)) %>% dplyr::select(Ano) %>% pull()
 ```
 
 A partir das informações da Tabela \@ref(tab:CH), percebe-se que o ano de 2015 apresentou o melhor desempenho na categoria de ciências humanas por parte das escolas privadas, uma vez que, a média obtida por estes alunos foi de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()`. Além disso, dentre estas escolas verifica-se quase uma ascendente melhora nas performances dos candidatos, uma vez que,  ano após ano, desconsiderando o ano de 2013, que apresentara um retrocesso de aproximadamente `r escolas %>% filter(Administração == "Pública", Ano == 2012) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull() - escolas %>% filter(Administração == "Pública", Ano == 2013) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% dplyr::select(média) %>% pull()` pontos em relação ao anterior, vê-se um planejamento e um bom preparo por parte destas instiuições em alavancar a performance de seus alunos nesta disciplina. Já para as escolas de ensino público, o ano de 2015 foi também o melhor ano para estas instituições, com a média de `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()`, ou seja, aproximadamente `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull() - escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(média = round(mean(NU_MEDIA_CH,na.rm = T),2)) %>% filter(média == max(média)) %>% dplyr::select(média) %>% pull()` pontos abaixo da performance das escolas privadas. Entretanto, assim como as escolas de ensino privado, com excessão do ano de 2013, as públicas também demonstraram a cada ano, melhores performances por parte de seus alunos. Além disso, ao realizar-se uma detalhada análise da tabela em questão, percebe-se que ano a ano, dentre os 25$\%$ piores resultados (ou seja, primeiro quartil), das escolas privadas, ainda são superiores aos 75$\%$ melhores resultados da instituições públicas, uma vez que, as medianas das duas intituições apresentaram grande diferença. 
@@ -213,7 +199,7 @@ escolas %>% group_by(Ano,`Administração`) %>%
   kable_styling(latex_options = "scale_down")
 ```
 
-Com base na tabela \@ref(tab:RED) observa-se no que tange ao desempenho dos alunos na prova de Redação que no ano de 2015 as escolas privadas obtiveram em média de pontos 930.00 e as escolas públicas, 851.27, e esses representaram as maiores notas máximas no período analisado. Nesse mesmo ano, tanto as instituições privadas quanto as públicas também obtiveram suas maiores notas mínimas, em média, 360.00 e 345.00 pontos, respectivamente. Em contraposição, ao analisarmos o ano em que as escolas obtiveram suas notas mínimas mais baixas, verificamos que ambas, privadas e públicas tiveram suas piores performances em Redação no mesmo ano, a saber, no ano de 2014, com a pontuação média de 215.38 nas escolas privadas e 186.67 nas públicas. Com relação à menor pontuação máxima, a mesma ocorreu em anos diferentes: as instituições privadas obtiveram 810.53 em 2012 e as públicas, por sua vez, 764.38 em 2011. Ainda, fazendo uma análise detalhada da tabela em referência, nota-se que ao logo dos anos que os piores resultados do primeiro quartil das escolas privadas são superiores aos melhores resultados do terceiro quartl das escolas públicas, tendo em vista que as medianas das duas administrações apresentaram grande diferença, e isso denota a melhor performance das instituições privadas na Redação ao longo do período. O que chama a atenção nessa pontuação do ano de 2014 especificamente é a coincidência de ambas administrações, privadas e públicas, performarem mal no mesmo ano. Apesar das instituições privadas apresentarem um desempenho geral melhor que o das escolas públicas, em 2014 tanto sua pontuação mínima quanto sua pontuação máxima foram as mais baixas do período entre 2011 e 2015. E o mesmo aconteceu para nas instituições públicas nesse ano. Fatores externos, como o tema escolhido para a redação e até um preparo dos alunos das instituições privadas mais focado em outras áreas, podem influenciar igualmente a variação, para cima ou para baixo, dos indicadores aqui analisados.
+Com base na Tabela \@ref(tab:RED) observa-se no que tange ao desempenho dos alunos na prova de Redação que no ano de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == max(max)) %>% dplyr::select(Ano) %>% pull()` as escolas privadas obtiveram em média de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == max(max)) %>% dplyr::select(max) %>% pull()` pontos e as escolas públicas, `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == max(max)) %>% dplyr::select(max) %>% pull()`, e esses representaram as maiores notas máximas no período analisado. Nesse mesmo ano, as instituições públicas também obtiveram suas maiores notas mínimas, uma média de `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(min = min(NU_MEDIA_RED,na.rm = T)) %>% filter(min == max(min)) %>% dplyr::select(min) %>% pull()` pontos, enquanto que as instituições privadas registraram  `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(min = min(NU_MEDIA_RED,na.rm = T)) %>% filter(min == max(min)) %>% dplyr::select(min) %>% pull()` pontos o melhor resultado em relação as menores notas em `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(min = min(NU_MEDIA_RED,na.rm = T)) %>% filter(min == max(min)) %>% dplyr::select(Ano) %>% pull()`. Em contraposição, ao analisarmos o ano em que as escolas obtiveram suas notas mínimas mais baixas, verificamos que ambas, privadas e públicas tiveram suas piores performances em Redação no mesmo ano, a saber, no ano de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(min = min(NU_MEDIA_RED,na.rm = T)) %>% filter(min == min(min)) %>% dplyr::select(Ano) %>% pull()`, com a pontuação média de `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(min = min(NU_MEDIA_RED,na.rm = T)) %>% filter(min == min(min)) %>% dplyr::select(min) %>% pull()` nas escolas privadas e `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(min = min(NU_MEDIA_RED,na.rm = T)) %>% filter(min == min(min)) %>% dplyr::select(min) %>% pull()` nas públicas. Com relação à menor pontuação máxima, a mesma ocorreu em anos diferentes: as instituições privadas obtiveram `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == min(max)) %>% dplyr::select(max) %>% pull()` em `r escolas %>% filter(Administração == "Privada") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == min(max)) %>% dplyr::select(Ano) %>% pull()` e as públicas, por sua vez, `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == min(max)) %>% dplyr::select(max) %>% pull()` em `r escolas %>% filter(Administração == "Pública") %>% group_by(Ano) %>% summarize(max = max(NU_MEDIA_RED,na.rm = T)) %>% filter(max == min(max)) %>% dplyr::select(Ano) %>% pull()`. Ainda, fazendo uma análise detalhada da tabela em referência, nota-se que ao logo dos anos que os piores resultados do primeiro quartil das escolas privadas são superiores aos melhores resultados do terceiro quartil das escolas públicas, tendo em vista que as medianas das duas administrações apresentaram grande diferença, e isso denota a melhor performance das instituições privadas na Redação ao longo do período. O que chama a atenção nessa pontuação do ano de 2014 especificamente é a coincidência de ambas administrações, privadas e públicas, performarem mal no mesmo ano. Apesar das instituições privadas apresentarem um desempenho geral melhor que o das escolas públicas, em 2014 tanto sua pontuação mínima quanto sua pontuação máxima foram as mais baixas do período entre 2011 e 2015. E o mesmo aconteceu para nas instituições públicas nesse ano. Fatores externos, como o tema escolhido para a redação e até um preparo dos alunos das instituições privadas mais focado em outras áreas, podem influenciar igualmente a variação, para cima ou para baixo, dos indicadores aqui analisados.
 
 ```{r RED}
 #TABELA RESUMO DOS VALORES OBSERVADOS DA VARIAVEL NOTAS MEDIAS NA REDACAO
@@ -267,9 +253,15 @@ data %>%
         title = element_text(size = 9)) +
   ggtitle("Distribuições amostrais das notas médias obtidas no ENEM\nentre os anos de 2011 a 2015 de estudantes de escolas públicas e privadas ") +
   xlab("Notas médias") + 
-  ylab("Densidades")
+  ylab("Distribuições amostrais")
 ```
 
 # Considerações finais
+
+Tendo em vista as informações levantadas na seção de análise exploratória é possível quantificar mesmo que de forma aproximada a diferença que há entre o $DM_{Part}$ e $DM_{Pub}$ na realização do ENEM. É surpreendente o fato de que em quase todos os anos e áreas de conhecimento avaliadas dentre os 25$\%$ dos menores registros do $DM_{Part}$ houve resultados maiores do que 75$\%$ dos menores registros do $DM_{Pub}$. Além disso, embora que de modo geral não houve evidências de uma mudança discrepante nas distribuições tanto do $DM_{Pub}$ quanto do $DM_{Part}$ ao longo do período analisado. Observamos que os melhores resultados entre todas as habilidades exigidas e categorias administrativas, em sua maioria ficaram concentrados em 2011 ano inicial e 2015 ano final do período. Enquanto que os piores desempenhos variaram entre os anos de 2012 a 2014. Ademais, as distribuições amostrais do $DM_{Pub}$ possuem menor variabilidade em relação as distribuições do $DM_{Part}$. Deste modo concentram-se mais próximo das médias.
+
+Registramos que especificamente em relação aos desempenhos em CN, ambas as categorias de administração não mostaram mudanças de performance ao longo do período. Por outro lado considerando os desempenhos em CH verificou-se um pequeno aumento no redimento em ambas as categorias administrativas. Além disso no que diz respeito as distribuições do $DM_{Pub}$ e $DM_{Part}$ de LP, estas apresentam como característica o fato de que iniciam o período com melhores resultados em 2011, diminuem o rendimento nos anos de 2012, 2013 e assumem uma taxa de performance crescente em 2014 e 2015. Da mesma forma que as distribuições do $DM_{Pub}$ e $DM_{Part}$ em LP observamos que em relação a habilidade de MT, esta possui os melhores resultados no ano de 2011. Contudo demonstrou uma diminuição gradativa no desempenho médio ano após ano durante todo o período. Ainda em relação as performances em MT chamou a atenção o fato de que apesar do desempenho médio ter diminuído ao longo dos anos, houve um aumento nos resultados máximos obtidos. Em outras palavras, enquanto a maioria das escolas perderam qualidade nos resultados do ENEM, algumas outras conseguiram melhorar o rendimento de seus estudantes na realização da prova. Sobre as distribuições do $DM_{Pub}$ e $DM_{Part}$ de RED vimos que estas apresentaram a maior variabilidade dos dados, atingindo tanto os menores quanto os maiores resultados do período. Assim como o $DM_{Pub}$ e $DM_{Part}$ de LP, em RED houve um pequena diminuição na performance dos resultados obtidos em relação a 2011. Porém houve uma recuperação até o ponto de atingirem os melhores desempenhos em 2015 último ano do período observado.
+
+Portanto, temos que de forma geral o $DM_{Part}$ é maior do que o $DM_{Pub}$ com a diferença média podendo alcançar 100 pontos como é o caso dos desempenhos em RED. Além do mais não foi identificada alterações muito grandes nos $DM_{Part}$ e $DM_{Pub}$ ao longo do tempo. De certa forma ambos demonstraram um comportamento semelhante durante todo período. Visto que em ambas as categorias administrativas, CH foi a única área de conhecimento exigida no ENEM que demonstrou um desenvolvimento positivo durante todo período observado. Em contraste MT tornou-se gradativamente a habilidade com pior desempenho, com excessão de algumas escolas particulares que conseguiram melhorar o rendimento de seus estudantes nessa habilidade. Além disso, ficou registrado que RED é a área de conhecimento na qual se concentram tanto os maiores como menores desempenhos médios escolares. Sendo que os melhores desempenhos foram registrados majoritariamente em 2011 ou em 2015.
 
 # Referências
